#627: bump server versions and add WF23 with JSF 2.3 to IT

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ branches:
 # Do integration test on configured servers.
 env:
    - SERVER=wildfly
+   - SERVER=wildfly23
    - SERVER=tomee
    - SERVER=payara
 script: mvn verify -Dmaven.javadoc.skip=true -P $SERVER
