#648: add Tomcat + Mojarra 4 to IT

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ env:
    - SERVER=wildfly
    - SERVER=liberty
    - SERVER=glassfish
-   - SERVER=tomcat-mojarra
+   - SERVER=tomcat-mojarra4
+   - SERVER=tomcat-mojarra3
    - SERVER=tomcat-myfaces
 #  - SERVER=tomee
 #  - SERVER=payara
