Tried OpenLiberty 21.0.0.11-beta on this but still same issue

--- a/pom.xml
+++ b/pom.xml
@@ -529,7 +529,7 @@
 										<artifactItem>
 											<groupId>io.openliberty.arquillian</groupId>
 											<artifactId>arquillian-liberty-support-jakarta</artifactId>
-											<version>2.0.0-M1</version>
+											<version>2.0.1</version>
 											<type>zip</type>
 											<classifier>feature</classifier>
 											<outputDirectory>${project.build.directory}/wlp/usr</outputDirectory>
