--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,21 +1,27 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+#
+# Copyright 2021 OmniFaces
+#
+# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
+# the License. You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
+# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
+# specific language governing permissions and limitations under the License.
+#
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ 3.x ]
-  pull_request:
-    branches: [ 3.x ]
+on: [push, pull_request]
 
 jobs:
-  build:
+  test:
+    name: Test 3.x on ${{matrix.server}}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        profile: [wildfly, tomee, payara tomcat-mojarra ]
-    name: 3.x on ${{matrix.profile}}
+        server: [wildfly, tomee, payara, tomcat-mojarra ]
 
     steps:
     - uses: actions/checkout@v2
@@ -25,5 +31,5 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
         cache: maven
-    - name: Build with Maven
-      run: mvn verify -Dmaven.javadoc.skip=true -P ${{matrix.profile}}
+    - name: Test with Maven
+      run: mvn verify -Dmaven.javadoc.skip=true -P ${{matrix.server}}
