Don't abort the whole job when at least one test failed

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,7 @@ jobs:
   test:
     name: Test 3.x on ${{matrix.server}}
     runs-on: ubuntu-latest
+    continue-on-error: true
     strategy:
       matrix:
         server: [wildfly, tomee, payara, tomcat-mojarra ]
