--- a/.github/workflows/2.x.maven.yml
+++ b/.github/workflows/2.x.maven.yml
@@ -11,6 +11,9 @@
 # specific language governing permissions and limitations under the License.
 #
 
+# NOTE: this workflow file cannot have the same file name across all branches, otherwise each branch will pick the 
+# latest modified one. Hence the workflow files have each a different file name with the branch name as prefix. 
+
 name: 2.x
 
 on:
@@ -27,7 +30,6 @@ jobs:
     strategy:
       matrix:
         server: [wildfly-jsf22, wildfly-jsf23, tomee, payara ]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 8
@@ -37,4 +39,23 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Test with Maven
-      run: mvn verify -Dmaven.javadoc.skip=true -P ${{matrix.server}}
+      run: mvn verify -P ${{matrix.server}}
+
+  deploy:
+    name: Deploy 2.x SNAPSHOT to Sonatype
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        java-version: '8'
+        distribution: 'adopt'
+        cache: maven
+    - name: Extract project version
+      id: project
+      run: echo ::set-output name=version::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+    - name: Deploy with Maven
+      if:  ${{!endsWith(steps.project.outputs.version, '-SNAPSHOT')}}
+      run: mvn deploy -Dmaven.test.skip=true
