Inverse condition to desired one

--- a/.github/workflows/2.x.maven.yml
+++ b/.github/workflows/2.x.maven.yml
@@ -57,5 +57,5 @@ jobs:
       id: project
       run: echo ::set-output name=version::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
     - name: Deploy with Maven
-      if:  ${{!endsWith(steps.project.outputs.version, '-SNAPSHOT')}}
+      if:  ${{endsWith(steps.project.outputs.version, '-SNAPSHOT')}}
       run: mvn deploy -Dmaven.test.skip=true
